# MorphoAAP

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
.github/workflows/: cmake.yml
aap/: CMakeLists.txt  aap.cpp
aap/include/: AttributeComputedIncrementally.hpp  AttributeFilters.hpp  AttributeProfile.hpp  ComponentTree.hpp  ComputerMSER.hpp
aap/src/: AttributeComputedIncrementally.cpp  AttributeFilters.cpp  AttributeProfile.cpp  ComponentTree.cpp  ComputerMSER.cpp  NodeCT.cpp
cpp/: CMakeLists.txt
cpp/include/: AttributeComputedIncrementally.hpp  AttributeFilters.hpp  AttributeProfile.hpp  ComponentTree.hpp  ComputerMSER.hpp  aap
cpp/include/aap_bits/: AttributeComputedIncrementally.hpp  AttributeFilters.hpp  AttributeProfile.hpp  ComponentTree.hpp  ComputerMSER.hpp  NodeCT.hpp
cpp/src/: AttributeComputedIncrementally.cpp  AttributeFilters.cpp  AttributeProfile.cpp  ComponentTree.cpp  ComputerMSER.cpp  NodeCT.cpp
example/: Classification_of_remote_sensing_data_with_MorphAAP.ipynb  Experiments_with_different_APsArea_methods.ipynb  img_gt.mat  img_train.mat
morphoaap/: APs_Methods.py  CMakeLists.txt  __init__.py  morphoaap.cpp  test.py  test_mser.py
morphoaap/include/: Adjacency8.hpp  AdjacencyRelation.hpp  AttributeComputedIncrementally.hpp  AttributeFilters.hpp  AttributeProfile.hpp  ComponentTree.hpp  ComputerMSER.hpp
morphoaap/src/: Adjacency8.cpp  AdjacencyRelation.cpp  AttributeComputedIncrementally.cpp  AttributeFilters.cpp  AttributeProfile.cpp  ComponentTree.cpp  ComputerMSER.cpp  NodeCT.cpp  teste.cpp
python/: aap.cpp
tests/: test.py
